@@ -7,6 +7,7 @@ version next:
 - SBaGen (SBG) binaural beats script demuxer
 - OpenMG Audio muxer
 - SMJPEG demuxer
+- dv: add timecode to metadata
 
 
 version 0.9:
